--- a/style.css
+++ b/style.css
@@ -1,9 +1,32 @@
 *,
 canvas {
+  bottom: 0;
   padding: 0;
   margin: 0;
   overflow: hidden;
 }
 canvas {
+  position: relative;
   background-color: black;
+}
+.scoreContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+}
+.scoreContainer h3 {
+  font-weight: 500;
+  padding: 0;
+  margin: 0;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+.gameTitle {
+  display: flex;
+  align-items: flex-end;
+}
+.gameTitle img {
+  width: 30px;
+  object-fit: contain;
 }
